Colaboratory kullanılarak oluşturuldu

--- a/Parse_Reddit_Turkey.ipynb
+++ b/Parse_Reddit_Turkey.ipynb
@@ -6,7 +6,7 @@
       "name": "Parse_Reddit_Turkey.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjhMK0Z0BhY8HuUK7pSAdQ",
+      "authorship_tag": "ABX9TyMyn+pD1v3aSLIixyV81vey",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       },
       "source": [
         "\n",
-        "subreddit_chosen = \"turkey\"\n",
+        "subreddit_chosen = \"europe\"\n",
         "\n",
         "title_limit = 1000\n",
         "\n",
